# SnippingML

./: README.md  apply_ocr.py  launch_search.py  pyproject.toml  snip_text.py
